# tado_away

./: pyproject.toml  readme.md  tado_away.py
