[tool.poetry]
name = "tado_away"
version = "0.1.0"
description = ""
authors = ["Benoît Amiaux <benoit.amiaux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^11.2.0"
python-tado = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
